@@ -338,3 +338,4 @@
 - Moved m_chgident to an .so
 - Changed license of m_dummy.c (dummy module, skeleton), so people can do
   closed source modules.
+- Moved m_setname to a .so
